Add more run options